# StrangerDanger

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docker/backend/: Dockerfile
stranger_danger/: Dockerfile  requirements-dev.txt  requirements.txt
stranger_danger/api/app/: main.py
stranger_danger/api/app/internal/: cache.py  examples.py
stranger_danger/api/app/internal/areas/: path.py  schema.py
stranger_danger/api/app/internal/auth/: auth.py  schema.py
stranger_danger/api/app/internal/detector/: create.py  schema.py
stranger_danger/api/app/routers/: areas.py  circular_fences.py  detector.py  email.py  fences.py  pentagon_fences.py  predictions.py  rectangular_fences.py  users.py
stranger_danger/classifier/: __init__.py  protocol.py
stranger_danger/classifier/cv2dnn/: cv2_dnn.py
stranger_danger/classifier/cv2dnn/requirements/: constants.py
stranger_danger/constants/: image_constants.py  image_types.py  settings.py
stranger_danger/db/: queries.py  session.py
stranger_danger/db/config/: settings.py
stranger_danger/db/db-scripts/: env.py
stranger_danger/db/db-scripts/versions/: 0f8fddb8bb9c_initial_table_setup.py  20af49be07cf_initial_table_setup.py  6f66e79e820a_initial_table_setup.py  77ae959c826b_initial_table_setup.py  78871d27424f_initial_table_setup.py  797d15894f31_initial_table_setup.py  a6d68778b208_initial_table_setup.py  b6fac015da23_initial_table_setup.py
stranger_danger/db/tables/: __init__.py  areas.py  classifier.py  detector.py  email.py  fences.py  predictions.py  users.py
stranger_danger/detector/: detector.py  event_listener.py
stranger_danger/email/: send_mail.py
stranger_danger/email_service/: send_mail.py
stranger_danger/fences/: __init__.py  circular_fence.py  pentagon_fence.py  protocol.py  rectangular_fence.py
tests/: conftest.py  test_rectangular_fence.py
tests/api/internal/areas/: test_path.py
tests/classifier/: test_cv2dnn.py
tests/db/: test_connection.py  test_fences.py  test_session.py
tests/detector/: test_detector.py  test_file_observer.py
tests/email/: test_send_mail.py
tests/fences/: test_circular_fence.py  test_pentagon_fence.py  test_rectangular_fence.py
tests/test_classifier/: test_cv2dnn.py
tests/test_fences/: test_circular_fence.py  test_pentagon_fence.py  test_rectangular_fence.py
(+2 files in other folders)
