[tool.poetry]
name = "StrangerDanger"
version = "0.1.0"
description = "Tool for detecting objects in a given region of interest"
authors = ["Niklas Rittmann <niklas.rittmann@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.9.0"}
matplotlib = "^3.5.1"
pytest = "^7.0.1"
email-validator = "^1.1.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.31"}
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
watchdog = "^2.1.6"
setuptools = "^60.9.3"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
coverage = "^6.3.2"
python-dotenv = "^0.19.2"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
PyJWT = "^2.3.0"
opencv-python-headless = "^4.5.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.1"
pytest-asyncio = "^0.18.1"
alembic = "^1.7.6"

[tool.black]
line-length = 88

[tool.isort]
known_third_party = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
